--- a/FinalProject/MainPage.resx
+++ b/FinalProject/MainPage.resx
@@ -1893,17 +1893,14 @@
   </data>
   <data name="richTextBox1.Text" xml:space="preserve">
     <value>The package includes:
-Hair and Makup
-Apppetizers and Meal service
-Wedding cake
-Bar service
-Champagne and Cider toast
-Invitations and Accessories
-Dj and MC service
-Chairs and Linens
-Centerpieces
-Photobooth
-price $52000</value>
+Venue Booking
+Pre-wedding Beauty services
+Wedding day beauty services
+Catering Service inludes wedding cake
+Photography service
+Decor services with Invitations
+Dj and MC services
+Price 600,000 ETB</value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
