--- a/FinalProject/Properties/Resources.resx
+++ b/FinalProject/Properties/Resources.resx
@@ -118,25 +118,49 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="user-6769" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user-6769.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="mail-2564" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\mail-2564.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="user-4254" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\user-4254.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fork-and-knife-12959" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fork-and-knife-12959.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="share-arrow-855" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\share-arrow-855.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="login-password-119241" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\login-password-119241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="party-confetti-2994" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\party-confetti-2994.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mail-2564" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mail-2564.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="login-password-11924" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login-password-11924.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="musical-notes-10190 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\musical-notes-10190 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-4254" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-4254.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dryer-1593" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dryer-1593.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="musical-notes-10190" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\musical-notes-10190.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="login-password-119241" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\login-password-119241.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="location-2952" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\location-2952.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="user-6769" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\user-6769.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="phone-504" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\phone-504.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="camera-6734" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\camera-6734.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="gift-box-and-hearts-11420" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gift-box-and-hearts-11420.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
